recovery email created

--- a/views/index.haml
+++ b/views/index.haml
@@ -16,7 +16,7 @@
     .col12
       .article
         .heading
-          %h2="Logged in as \"#{@user.name}\""
+          %h2.shadow-bottom="Logged in as \"#{@user.name}\""
 .row
   .col8
     .article
