--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -117,6 +117,11 @@ input:focus
   -webkit-box-shadow: -7px 7px $shadow
   box-shadow: -7px 7px $shadow
 
+.shadow-bottom
+  -moz-box-shadow: 0px 7px $shadow
+  -webkit-box-shadow: 0px 7px $shadow
+  box-shadow: 0px 7px $shadow
+
 #logo
   width: 100%
   height: 9em
