more email changes

--- a/views/recover.haml
+++ b/views/recover.haml
@@ -3,4 +3,4 @@
 %p
   This email was sent to you because a password request was recived in our systems. If you haven't requested such a password reset please ignore this email.
 %p If you do want to reset your password please follow this link
-%p=@user.recover_key
+%p="#{request.host}:#{request.port}/recover/#{@user.id}/#{@user.recover_key}"
