--- a/views/usersettings.haml
+++ b/views/usersettings.haml
@@ -22,4 +22,4 @@
   :checked => @user.color == $config[:color8] ? "checked" : nil}  
   %div
     %button.button{:type => "button",:onClick => "submitForm('#settingsform','/settings');"} Save
-    %button.button{:type => "button",:onClick => "closeMessage();"} Cancel
+    %button.button{:type => "button",:onClick => "closeMessage();"} Close
