fixed user signup bug dont use valid? method name

--- a/views/error.haml
+++ b/views/error.haml
@@ -1,3 +1,6 @@
+.heading
+  %h2 Errors
 -@error.each do |e|
   -e.each do |text|
     .error=text
+%button.button{:onclick => "$('#cover-all').hide();"} Close
