Fixed incorrect spelling

--- a/views/thegame.haml
+++ b/views/thegame.haml
@@ -1,3 +1,3 @@
-%p AsciiSoccer is a soccer like game where you control one of the players. The goal of the game is to score as manny goals as possible before the game ends.
-%p The game starts after an initial count down when all the players have connected. After ninety seconds the team with the moast goals is named the winner. If the score is equal the game counts as a draw.
+%p AsciiSoccer is a soccer like game where you control one of the players. The goal of the game is to score as many goals as possible before the game ends.
+%p The game starts after an initial count down when all the players have connected. After ninety seconds the team with the most goals is named the winner. If the score is equal the game counts as a draw.
 %p To control your player you use the numpad, make sure numlock is on, or the arrow keys. You can shoot using the s key and dribble using the a and d keys. Let the fun begin!
