--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -2,6 +2,8 @@
 %script{:type => "text/javascript", :src  => "/js/game.js"}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/gameboard.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
+%audio{:id => "whistle", :preload => "true", :autobuffer => true}
+  %source{:src => "/audio/whistle.mp3"}
 #gameConfig
   #current_player=@game.number_of_players
   #port=@game.port
