--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -233,3 +233,44 @@ input:focus
 
 .color8
   background-color: $color8
+
+#stage
+  background-color: $black
+  width: 1000px
+  height: 600px
+  margin-left: auto
+  margin-right: auto
+  border: 3px solid $white
+
+#score
+  padding-top: 20px
+  padding-bottom: 20px
+  background-color: $black
+  width: 500px
+  margin-left: auto
+  margin-right: auto
+  border: 3px solid $white
+  border-top-width: 0px
+
+#gameConfig
+  display: none
+
+#timebox
+  padding-top: 20px
+  padding-bottom: 20px
+  background-color: $black
+  width: 300px
+  margin-left: auto
+  margin-right: auto
+  border: 3px solid $white
+  border-bottom-width: 0px
+
+.score-board
+  margin: 1em
+  padding: 1em
+  font-size: 1.25em
+  border: 3px solid $white
+  background-color: $black
+
+.hidden
+  visibility: hidden
