--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -1,6 +1,7 @@
 %script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
 %script{:type => "text/javascript", :src  => "/js/game.js"}
-%link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/gameboard.css'}
+%link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/grid.css'}
+%link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
 %audio{:id => "whistle", :preload => "true", :autobuffer => true}
   %source{:src => "/audio/whistle.mp3"}
