--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -274,3 +274,22 @@ input:focus
 
 .hidden
   visibility: hidden
+
+h4 
+  line-height: 1em
+  margin-bottom: 5px
+
+.names
+  padding-top: 1em
+
+.scroller
+  height: 300px
+  overflow-y: hidden
+  display: block
+  border-bottom:  5px solid $white
+
+  .heading
+    margin-top: 15em
+
+  .end
+    margin-top: 10em
