--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -99,7 +99,7 @@ input:focus
   box-shadow: 0px 7px $shadow
 
 .message
-  width: 600px
+  min-width: 650px
 
 .center-text
   text-align: center
@@ -246,7 +246,7 @@ input:focus
   padding-top: 20px
   padding-bottom: 20px
   background-color: $black
-  width: 500px
+  width: 650px
   margin-left: auto
   margin-right: auto
   border: 3px solid $white
