--- a/views/game.haml
+++ b/views/game.haml
@@ -8,11 +8,11 @@
         .heading
           %h2 Game Over
         .score-board
-          %span.accent-text Team 1
+          %span#team1namefinal.accent-text Team 1
           %span#team1finalscore 0
           %span -
           %span#team2finalscore 0
-          %span.accent-text Team 2
+          %span#team2namefinal.accent-text Team 2
         %button.button{:onclick => "window.location='/game_queue/'"} Play again
         %button.button{:onclick => "window.location='/'"} Back
     #timebox
@@ -24,8 +24,8 @@
       %canvas{:id => "canvas", :width => 1000, :height => 600} 
     #score
       %center
-        %span.accent-text Team 1
+        %span.accent-text#team1name Team 1
         %span#team1 0
         %span -
         %span#team2 0
-        %span.accent-text Team 2
+        %span.accent-text#team2name Team 2
