--- a/views/credits.haml
+++ b/views/credits.haml
@@ -38,6 +38,10 @@
     %h4 Tomas Almgren
     %h4 Anders Kling
   .heading
+    %h2 Sponsors
+  .names
+    %h4 Combitech
+  .heading
     %h2 AsciiSoccer
   .end
     
