--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -172,6 +172,8 @@ input:focus
   background-color: rgba(30,30,30,0.5)
   width: 100%
   height: 100%
+  left: 0
+  top: 0
   position: absolute
   z-index: 9999
   display: none
