countdown and connection

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -295,3 +295,19 @@ h4
 
   .end
     margin-top: 10em
+
+#onscreen
+  position: fixed
+  width: 100%
+  height: 100%
+  left: 0
+  top: 0
+  z-index: 9999
+  
+  span
+    width: 800px
+    text-align: center
+    margin-top: 350px
+    margin-left: auto
+    margin-right: auto
+    display: block
