--- a/views/credits.haml
+++ b/views/credits.haml
@@ -29,6 +29,7 @@
     %h2 Special thanks to
   .names
     %h4 Tove Jomer
+    %h4 Olof Sandberg
     %h4 Robert Carlsson
     %h4 Björn Hässler
     %h4 Samuel Rhamqvist
