--- a/views/game.haml
+++ b/views/game.haml
@@ -15,6 +15,9 @@
           %span#team2namefinal.accent-text Team 2
         %button.button{:onclick => "window.location='/game_queue/'"} Play again
         %button.button{:onclick => "window.location='/'"} Back
+    #onscreen
+      %span Waiting for other players...
+
     #timebox
       %center
         %span#time 90
