--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -9,6 +9,7 @@
   %source{:src => "/audio/themesong.ogg"}
 #gameConfig
   #current_player=@game.number_of_players
+  #maximum_players=@game.maximum_players
   #port=@game.port
   -if @user  
     #signed_on 1
