--- a/views/login.haml
+++ b/views/login.haml
@@ -2,9 +2,9 @@
   %h2=@text
 %form{:id => "#{@type}form",:method => "post"}
   %label Email: 
-  %input{:name => "email", :onKeyPress => "return false;"}
+  %input{:name => "email"}
   %label Password: 
-  %input{:type => "password", :name => "password", :onKeyPress => "return false;"}
+  %input{:type => "password", :name => "password"}
   %div
     %button.button{:type => "button",:onclick => "submitForm('##{@type}form','#{@submit}');"}=@text
     -if @login
