--- a/views/login.haml
+++ b/views/login.haml
@@ -1,6 +1,7 @@
 .heading
   %h2=@text
-%form{:id => "#{@type}form",:method => "post"}
+%form{:id => "#{@type}form",:method => "post", :action => @submit}
+  %input.hidden{:type => "submit"}
   %label Email: 
   %input{:name => "email"}
   %label Password: 
