added more credits

--- a/views/credits.haml
+++ b/views/credits.haml
@@ -38,6 +38,7 @@
     %h4 Otilia Molin
     %h4 Tomas Almgren
     %h4 Anders Kling
+    %h4 Anders (Pjotr) Andersson
   .heading
     %h2 Sponsors
   .names
