--- a/views/credits.haml
+++ b/views/credits.haml
@@ -39,6 +39,8 @@
     %h4 Tomas Almgren
     %h4 Anders Kling
     %h4 Anders (Pjotr) Andersson
+    %h4 Daniel Fyhr
+    %h4 Erik Winter
   .heading
     %h2 Sponsors
   .names
