--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -248,9 +248,10 @@ input:focus
   padding-top: 20px
   padding-bottom: 20px
   background-color: $black
-  width: 650px
+  width: 1000px
   margin-left: auto
   margin-right: auto
+  text-align: center
   border: 3px solid $white
   border-top-width: 0px
 
@@ -261,9 +262,11 @@ input:focus
   padding-top: 20px
   padding-bottom: 20px
   background-color: $black
-  width: 300px
+  width: 1000px
   margin-left: auto
   margin-right: auto
+  margin-top: 2em
+  text-align: center
   border: 3px solid $white
   border-bottom-width: 0px
 
@@ -303,15 +306,46 @@ h4
 #onscreen
   position: fixed
   width: 100%
-  height: 100%
+  height: 50%
   left: 0
   top: 0
   z-index: 9999
+  padding-top: 20em
   
-  span
+  #waiting
     width: 800px
     text-align: center
-    margin-top: 350px
     margin-left: auto
     margin-right: auto
     display: block
+    font-size: 1.4em
+    margin-bottom: 3em
+  
+  .keys
+    margin-top: 1em
+    width: 800px
+    text-align: center
+    font-size: 0.8em
+    margin-left: auto
+    margin-right: auto
+    display: block
+
+    span
+      display: inline-block
+    
+    .left
+      width: 35%
+    .right
+      width: 35%
+    .middle
+      width: 2%
+
+#menu
+  width: 1000px
+  margin-left: auto
+  margin-right: auto
+  margin-top: 1em
+  text-align: left
+  
+  .button
+    margin: 0px
