--- a/assets/css/color.sass
+++ b/assets/css/color.sass
@@ -5,13 +5,13 @@ $light      :    #3b9f3b
 $shadow     :    #354535
 $accent     :    #D3D32b
 $accent2    :    #CC0000
-$color1     :    #4D387B
-$color2     :    #B20000
-$color3     :    #6AC0BD
-$color4     :    #FE374A
-$color5     :    #FC7736
-$color6     :    #EDC218
-$color7     :    #2ADE75
+$color1     :    #333333
+$color2     :    #4D387B
+$color3     :    #B20000
+$color4     :    #1B91E0
+$color5     :    #FE374A
+$color6     :    #FC7736
+$color7     :    #EDC218
 $color8     :    #F77EC3
 $foreground :    #2BBF2B  
 $background :    #2BAF2B
