bug fix on waiting text

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -319,6 +319,7 @@ h4
     margin-right: auto
     display: block
     font-size: 1.4em
+    line-height: 1.4em
     margin-bottom: 3em
   
   .keys
