Added feature to turn on or off audio

--- a/views/game.haml
+++ b/views/game.haml
@@ -42,4 +42,4 @@
       %span#team2 0
       %span.accent-text#team2name Team 2
     #menu
-      %button.button{:onclick => ""} S
+      %button.button{:id => "volumeController", :onclick => "Game.toggleAudio()"} Sound on
