some server metrics

--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -6,9 +6,8 @@ body
   font-family: 'Press Start 2P', cursive
 
 h1
-  padding-top: 20px
+  margin-top: 20px
   text-shadow: $black 0.1em 0.1em 0.1em
-  position: relative
 
 p
   line-height: 1.25em
@@ -350,3 +349,43 @@ h4
   
   .button
     margin: 0px
+
+#game_menu
+  width: 70%
+  height: 100%
+  display: inline-block
+  padding: 0
+  margin: 0
+  float: left
+
+#border
+  width: 0.5%
+  height: 100%
+  display: inline-block
+  background-color: $white
+  padding: 0
+  margin: 0
+  float: left
+
+#server_info
+  height: 100%
+  width: 29.5%
+  display: inline-block
+  background-color: $active
+  text-align: left
+  padding: 0
+  margin: 0
+  float: left
+
+  .info
+    font-size: 0.6em
+    padding-left: 10px
+    padding-top: 10px
+
+  span.data
+    display: inline-block
+    width: 70%
+
+#game_menu_box
+  height: 150px
+  overflow: hidden
