Better court grafics, and performance boost.

--- a/assets/css/color.sass
+++ b/assets/css/color.sass
@@ -1,20 +1,21 @@
-$white      :    #ffffff
-$gray       :    #333333
-$black      :    #000000
-$light      :    #3b9f3b
-$shadow     :    #354535
-$accent     :    #D3D32b
-$accent2    :    #CC0000
-$color1     :    #333333
-$color2     :    #4D387B
-$color3     :    #B20000
-$color4     :    #1B91E0
-$color5     :    #FE374A
-$color6     :    #FC7736
-$color7     :    #EDC218
-$color8     :    #F77EC3
-$foreground :    #2BBF2B  
-$background :    #2BAF2B
-$active     :    #454577
-$inactive   :    #999999
-$border_color :  #ffffff
+$white        :    #FFFFFF
+$gray         :    #333333
+$black        :    #000000
+$light        :    #3b9f3b
+$shadow       :    #354535
+$accent       :    #D3D32b
+$accent2      :    #CC0000
+$color1       :    #333333
+$color2       :    #4D387B
+$color3       :    #B20000
+$color4       :    #1B91E0
+$color5       :    #FE374A
+$color6       :    #FC7736
+$color7       :    #EDC218
+$color8       :    #F77EC3
+$light-grass  :    #2FC52F
+$dark-grass   :    #2BBF2B
+$background   :    #2BAF2B
+$active       :    #454577
+$inactive     :    #999999
+$border_color :    #FFFFFF
