--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -1,5 +1,11 @@
 @import "color"
 
+@font-face 
+  font-family: 'Press Start 2P'
+  font-style: normal
+  font-weight: 400
+  src: local('Press Start 2P'), local('Press Start 2P'), url('/vendor/font/Press2Play.woff') format('woff')
+
 body 
   background-color: $light
   color: $white
