--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -1,4 +1,5 @@
-%script{:type => "text/javascript", :src  => "https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"}
+%script{:type => "text/javascript", :src => "/vendor/js/jq.min.js"}
+%script{:type => "text/javascript", :src  => "/vendor/js/jquery.mobile-1.2.0.min.js"}
 %script{:type => "text/javascript", :src  => "/js/audio.js"}
 %script{:type => "text/javascript", :src  => "/js/game.js"}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/grid.css'}
