--- a/views/head_gameboard.haml
+++ b/views/head_gameboard.haml
@@ -1,10 +1,12 @@
-%script{:type => "text/javascript", :src => "/vendor/js/jq.min.js"}
-%script{:type => "text/javascript", :src  => "/vendor/js/jquery.mobile-1.2.0.min.js"}
-%script{:type => "text/javascript", :src  => "/js/audio.js"}
-%script{:type => "text/javascript", :src  => "/js/game.js"}
+%link{:rel => 'shortcut icon', :href => "http://localhost"}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/grid.css'}
 %link{:rel => 'stylesheet', :type => 'text/css', :href => '/css/styles.css'}
 %link{:href => "http://fonts.googleapis.com/css?family=Press+Start+2P&subset=latin,greek,latin-ext,cyrillic", :rel => "stylesheet", :type => "text/css"}
+%script{:type => "text/javascript", :src => "/vendor/js/jq.min.js"}
+%script{:type => "text/javascript", :src  => "/vendor/js/jquery.mobile.custom.min.js"}
+%script{:type => "text/javascript", :src  => "/js/audio.js"}
+%script{:type => "text/javascript", :src  => "/js/controller.js"}
+%script{:type => "text/javascript", :src  => "/js/game.js"}
 %audio{:id => "whistle", :preload => "true", :autobuffer => true}
   %source{:src => "/audio/whistle.wav"}
 %audio{:id => "theme", :preload => "true", :autobuffer => true}
@@ -24,6 +26,6 @@
     #signed_on 0
     #team_name="Team #{@game.number_of_players}"
     #selected_color=1
-    #audio_muted=false
+    #audio_muted=@muted
   -$config.each do |key,value|
     %div{:id => key}=value
