--- a/views/credits.haml
+++ b/views/credits.haml
@@ -22,7 +22,7 @@
   .heading
     %h2 Logo and Artwork
   .names
-    %h4 Andreas Lewandowski
+    %h4 Linn Mork
     %h4 Pablo Karlsson
   
   .heading
@@ -41,6 +41,7 @@
     %h4 Anders (Pjotr) Andersson
     %h4 Daniel Fyhr
     %h4 Erik Winter
+    %h4 Andreas Lewandowski
   .heading
     %h2 Sponsors
   .names
