--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,8 +9,8 @@
           =@message 
     #header.row
       .col4
-      .col4
-        %span#logo
+      .col4#logo
+        %img{:src => "/img/AsciiSoccer_logo.png"}
       .col4.last
     #content.row
       =yield
