--- a/views/playingwithfriends.haml
+++ b/views/playingwithfriends.haml
@@ -1,1 +1,1 @@
-%p To play with your friends simply signup for an account. This allows you to search for and add friends to your friends list. It will also allow your games to be ranked. The highest ranked players can be seen to the right on the highscore.
+%p This feature will soon be avilable. To use it you need to signup for an account and login to find your friends.
